@@ -1,8 +1,7 @@
 package Simulation.Core;
 
-import java.io.BufferedReader;
-import java.io.FileReader;
-import java.io.IOException;
+import java.io.*;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.ArrayList;
@@ -11,27 +10,36 @@ import java.util.List;
 public class Utils {
 
     public static String readFile(String filePath){
-        String str;
-        try {
-            str = new String(Files.readAllBytes(Paths.get(filePath)));
+        String normalizedPath = filePath.startsWith("/") ? filePath : "/" + filePath;
+        try (InputStream is = Utils.class.getResourceAsStream(normalizedPath)) {
+            if (is == null) {
+                throw new RuntimeException("Resource not found on classpath: " + filePath);
+            }
+            return new String(is.readAllBytes(), StandardCharsets.UTF_8);
         } catch (IOException excp) {
             throw new RuntimeException("Error reading file [" + filePath + "]", excp);
         }
-        return str;
     }
     public static List<String> ReadModel(String filename){
         List<String> ModelInfo = new ArrayList<>();
-        try (BufferedReader bf = new BufferedReader(new FileReader(filename))){
+        String normalizedPath = filename.startsWith("/") ? filename : "/" + filename;
+        InputStream is = Utils.class.getResourceAsStream(normalizedPath);
+        if (is == null) {
+            System.out.println("Resource not found on classpath: " + filename);
+            return ModelInfo;
+        }
+        try (BufferedReader bf = new BufferedReader(new InputStreamReader(is, StandardCharsets.UTF_8))){
             String line;
             while ((line = bf.readLine()) != null){
                 ModelInfo.add(line);
             }
-        }catch (Exception e){
+        } catch (IOException e){
             System.out.println("Cannot find file");
             e.printStackTrace();
         }
         return ModelInfo;
     }
+
     public static void AddElement(Entity[][] entities, int index, Entity element){
         int n = 0;
         while (n != -1){
